--- a/css/styles.css
+++ b/css/styles.css
@@ -340,15 +340,37 @@ fill: var(--primary-text-color);
 }
 .section-work-feature-list {
     display: flex;
+    justify-content: center;
 }
 .section-work-point {
     height: 294px;
     width: calc((100% - 60px) / 3);
     margin-right: 30px;
 }
-
 .section-work-point:nth-child(3n) {
     margin-right: 0;
+}
+
+.section-work-point {
+    position: relative;
+    display: block;
+    width: 370px;
+}
+.section-work-title-img {
+    position: absolute;
+    padding: 27px 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 70px;
+    background-color: rgba(47, 48, 58, 0.8);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--background-color);
 }
 
 /*        section-team        */
