--- a/css/styles.css
+++ b/css/styles.css
@@ -668,7 +668,7 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     top: 0;
     left: 0;
     background-color: var(--accent-color);
-    /* padding: 24px 63px; */
+    padding: 63px 24px;
     color: var(--background-color);
     font-weight: 400;
     font-size: 18px;
