--- a/css/styles.css
+++ b/css/styles.css
@@ -550,8 +550,7 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     display: inline-block;
     padding: 6px 22px;
     border-radius: 4px;
-
-    background-color: var(--background-color);
+    background-color: var(--fon-background-color-two);
     color: var(--text-color-zag);
     font-weight: 500;
     font-size: 16px;
